Refactor and rename more SCSS

--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -61,7 +61,7 @@
     </div>
 
     <section class="backtrace">
-        <nav class="sidebar">
+        <nav class="frames">
             <nav class="segmented">
                 <a href="#" id="application_frames">Application Frames</a><a href="#" id="all_frames">All Frames</a>
             </nav>
