--- a/lib/better_errors/templates/variable_info.erb
+++ b/lib/better_errors/templates/variable_info.erb
@@ -1,11 +1,11 @@
-<header class="trace_info clearfix">
+<header class="trace_info">
     <h2 class="title">
         <div class="name">#<%= @frame.name %></div>
         <div class="location">
             <a class="filename" href="<%= editor_url(@frame) %>"><span class="filename"><%= @frame.pretty_path %></span> &#x270E;</a>
         </div>
     </h2>
-    <div class="code_block clearfix">
+    <div class="code_block">
         <%== html_formatted_code_block @frame %>
     </div>
 </header>
