Add specs for actionable errors
and include an element around the action forms, and move the use of ActionDispatch out of the template.

--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -744,15 +744,17 @@
         <header class="exception">
             <h2><strong><%= exception_type %></strong> <span>at <%= request_path %></span></h2>
             <p><%= exception_message %></p>
-            <% if exception_actions.any? %>
-                <% exception_actions.each do |action, _| %>
-                    <form class="button_to" method="post" action="<%= ActionDispatch::ActionableExceptions.endpoint %>">
-                        <input type="submit" value="<%= action %>">
-                        <input type="hidden" name="action" value="<%= action %>">
-                        <input type="hidden" name="error" value="<%= exception_type %>">
-                        <input type="hidden" name="location" value="<%= request_path %>">
-                    </form>
-                <% end %>
+            <% unless active_support_actions.empty? %>
+                <div class='fix-actions'>
+                    <% active_support_actions.each do |action, _| %>
+                        <form class="button_to" method="post" action="<%= action_dispatch_action_endpoint %>">
+                            <input type="submit" value="<%= action %>">
+                            <input type="hidden" name="action" value="<%= action %>">
+                            <input type="hidden" name="error" value="<%= exception_type %>">
+                            <input type="hidden" name="location" value="<%= request_path %>">
+                        </form>
+                    <% end %>
+                </div>
             <% end %>
         </header>
     </div>
