Refactor ErrorPage into ErrorState
and move a bunch of exception edge cases into RaisedException

--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -799,7 +799,7 @@
 <script>
 (function() {
 
-    var OID = "<%= id %>";
+    var OID = "<%= exception_id %>";
 
     var previousFrame = null;
     var previousFrameInfo = null;
