--- a/lib/better_errors/templates/text.erb
+++ b/lib/better_errors/templates/text.erb
@@ -1,7 +1,10 @@
 <%== text_heading("=", "%s at %s" % [exception_type, request_path]) %>
 
-> <%== exception_message %>
-<% if backtrace_frames.any? %>
+<%== exception_message %>
+
+> To access an interactive console with this error, point your browser to: /__better_errors
+
+<% if backtrace_frames.any? -%>
 
 <%== text_heading("-", "%s, line %i" % [first_frame.pretty_path, first_frame.line]) %>
 
