--- a/lib/better_errors/templates/variable_info.erb
+++ b/lib/better_errors/templates/variable_info.erb
@@ -25,7 +25,7 @@
 </header>
 
 <% if BetterErrors.binding_of_caller_available? && @frame.frame_binding %>
-    <div class="hint" id='live-shell-hint'>
+    <div class="hint live-console-hint">
         This is a live shell. Type in here.
     </div>
 
