Use SCSS for development

--- a/lib/better_errors/style/main.scss
+++ b/lib/better_errors/style/main.scss
@@ -205,8 +205,9 @@ header.exception:hover p {
     }
 }
 
-<%#
+
 /* Light theme */
+/*
 header.exception {
     text-shadow: 0 1px 0 rgba(250, 250, 250, 0.6);
     background: rgba(200,100,50,0.10);
@@ -218,7 +219,7 @@ header.exception h2 strong {
 header.exception p {
     color: #744;
 }
-%>
+*/
 
 /* ---------------------------------------------------------------------
  * Navigation
