--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -5,9 +5,7 @@
 </head>
 <body class="better-errors-javascript-not-loaded">
     <%# Stylesheets are placed in the <body> for Turbolinks compatibility. %>
-    <style type='text/css'>
-      <%= File.open(File.expand_path("templates/main.css", File.dirname(__FILE__))).read %>
-    </style>
+    <%== ErrorPageStyle.style_tag %>
 
     <%# IE8 compatibility crap %>
     <script nonce="<%= csp_nonce %>">
