--- a/lib/better_errors/style/main.scss
+++ b/lib/better_errors/style/main.scss
@@ -719,3 +719,5 @@ nav.sidebar:hover::-webkit-scrollbar-thumb {
 .code:hover::-webkit-scrollbar-thumb {
     background: #888;
 }
+
+@import "syntax_highlighting";
