--- a/lib/better_errors/style/syntax_highlighting.scss
+++ b/lib/better_errors/style/syntax_highlighting.scss
@@ -1,150 +1,81 @@
-// rougify style pastie --scope ''
-// (And remove the first couple of selectors.)
- .c,  .ch,  .cd,  .cm,  .cpf,  .c1 {
-  color: #888888;
-}
- .cp {
-  color: #cc0000;
-  font-weight: bold;
-}
- .cs {
-  color: #cc0000;
-  background-color: #fff0f0;
-  font-weight: bold;
-}
- .err {
-  color: #a61717;
-  background-color: #e3d2d2;
-}
- .gr {
-  color: #aa0000;
-}
- .gh {
-  color: #333333;
-}
- .gu {
-  color: #666666;
-}
- .gd {
-  color: #000000;
-  background-color: #ffdddd;
-}
- .gi {
-  color: #000000;
-  background-color: #ddffdd;
-}
- .ge {
-  font-style: italic;
-}
- .gs {
-  font-weight: bold;
-}
- .gl {
-  color: #888888;
-}
- .go {
-  color: #888888;
-}
- .gp {
-  color: #555555;
-}
- .gt {
-  color: #aa0000;
-}
- .k,  .kc,  .kd,  .kn,  .kr,  .kv {
-  color: #008800;
-  font-weight: bold;
-}
- .kp {
-  color: #008800;
-}
- .kt {
-  color: #888888;
-  font-weight: bold;
-}
- .m,  .mb,  .mf,  .mh,  .mi,  .il,  .mo,  .mx {
-  color: #0000dd;
-  font-weight: bold;
-}
- .s,  .sb,  .sc,  .dl,  .sd,  .s2,  .sh,  .s1 {
-  color: #dd2200;
-  background-color: #fff0f0;
-}
- .sa {
-  color: #008800;
-  font-weight: bold;
-}
- .se {
-  color: #0044dd;
-  background-color: #fff0f0;
-}
- .si {
-  color: #3333bb;
-  background-color: #fff0f0;
-}
- .sx {
-  color: #22bb22;
-  background-color: #f0fff0;
-}
- .sr {
-  color: #008800;
-}
- .ss {
-  color: #aa6600;
-  background-color: #fff0f0;
-}
- .na {
-  color: #336699;
-}
- .nb,  .bp {
-  color: #003388;
-}
- .nc {
-  color: #bb0066;
-  font-weight: bold;
-}
- .no {
-  color: #003366;
-  font-weight: bold;
-}
- .nd {
-  color: #555555;
-}
- .ne {
-  color: #bb0066;
-  font-weight: bold;
-}
- .nf,  .fm {
-  color: #0066bb;
-  font-weight: bold;
-}
- .nl {
-  color: #336699;
-}
- .nn {
-  color: #bb0066;
-  font-weight: bold;
-}
- .py {
-  color: #336699;
-  font-weight: bold;
-}
- .nt {
-  color: #bb0066;
-  font-weight: bold;
-}
- .nv,  .vc,  .vm {
-  color: #336699;
-}
- .vg {
-  color: #dd7700;
-}
- .vi {
-  color: #3333bb;
-}
- .ow {
-  color: #008800;
-}
- .w {
-  color: #bbbbbb;
-}
+// Thanks to https://github.com/jwarby/jekyll-pygments-themes/blob/master/pastie.css
+
+$base01: #586e75;
+$base1: #93a1a1;
+$base3: #fdf6e3;
+$orange: #cb4b16;
+$red: #dc322f;
+$blue: #268bd2;
+$cyan: #2aa198;
+$green: #859900;
+$yellow: #B58900;
+
+& { background-color: $base3; color: $base01 }
+.c { color: $base1 } /* Comment */
+.err { color: $base01 } /* Error */
+.g { color: $base01 } /* Generic */
+.k { color: $green } /* Keyword */
+.l { color: $base01 } /* Literal */
+.n { color: $base01 } /* Name */
+.o { color: $green } /* Operator */
+.x { color: $orange } /* Other */
+.p { color: $base01 } /* Punctuation */
+.cm { color: $base1 } /* Comment.Multiline */
+.cp { color: $green } /* Comment.Preproc */
+.c1 { color: $base1 } /* Comment.Single */
+.cs { color: $green } /* Comment.Special */
+.gd { color: $cyan } /* Generic.Deleted */
+.ge { color: $base01; font-style: italic } /* Generic.Emph */
+.gr { color: $red } /* Generic.Error */
+.gh { color: $orange } /* Generic.Heading */
+.gi { color: $green } /* Generic.Inserted */
+.go { color: $base01 } /* Generic.Output */
+.gp { color: $base01 } /* Generic.Prompt */
+.gs { color: $base01; font-weight: bold } /* Generic.Strong */
+.gu { color: $orange } /* Generic.Subheading */
+.gt { color: $base01 } /* Generic.Traceback */
+.kc { color: $orange } /* Keyword.Constant */
+.kd { color: $blue } /* Keyword.Declaration */
+.kn { color: $green } /* Keyword.Namespace */
+.kp { color: $green } /* Keyword.Pseudo */
+.kr { color: $blue } /* Keyword.Reserved */
+.kt { color: $red } /* Keyword.Type */
+.ld { color: $base01 } /* Literal.Date */
+.m { color: $cyan } /* Literal.Number */
+.s { color: $cyan } /* Literal.String */
+.na { color: $base01 } /* Name.Attribute */
+.nb { color: $yellow } /* Name.Builtin */
+.nc { color: $blue } /* Name.Class */
+.no { color: $orange } /* Name.Constant */
+.nd { color: $blue } /* Name.Decorator */
+.ni { color: $orange } /* Name.Entity */
+.ne { color: $orange } /* Name.Exception */
+.nf { color: $blue } /* Name.Function */
+.nl { color: $base01 } /* Name.Label */
+.nn { color: $base01 } /* Name.Namespace */
+.nx { color: $base01 } /* Name.Other */
+.py { color: $base01 } /* Name.Property */
+.nt { color: $blue } /* Name.Tag */
+.nv { color: $blue } /* Name.Variable */
+.ow { color: $green } /* Operator.Word */
+.w { color: $base01 } /* Text.Whitespace */
+.mf { color: $cyan } /* Literal.Number.Float */
+.mh { color: $cyan } /* Literal.Number.Hex */
+.mi { color: $cyan } /* Literal.Number.Integer */
+.mo { color: $cyan } /* Literal.Number.Oct */
+.sb { color: $base1 } /* Literal.String.Backtick */
+.sc { color: $cyan } /* Literal.String.Char */
+.sd { color: $base01 } /* Literal.String.Doc */
+.s2 { color: $cyan } /* Literal.String.Double */
+.se { color: $orange } /* Literal.String.Escape */
+.sh { color: $base01 } /* Literal.String.Heredoc */
+.si { color: $cyan } /* Literal.String.Interpol */
+.sx { color: $cyan } /* Literal.String.Other */
+.sr { color: $red } /* Literal.String.Regex */
+.s1 { color: $cyan } /* Literal.String.Single */
+.ss { color: $cyan } /* Literal.String.Symbol */
+.bp { color: $blue } /* Name.Builtin.Pseudo */
+.vc { color: $blue } /* Name.Variable.Class */
+.vg { color: $blue } /* Name.Variable.Global */
+.vi { color: $blue } /* Name.Variable.Instance */
+.il { color: $cyan } /* Literal.Number.Integer.Long */
